--- a/advent-haskell.cabal
+++ b/advent-haskell.cabal
@@ -10,8 +10,8 @@ description:    Please see the README on GitHub at <https://github.com/tobeannou
 homepage:       https://github.com/tobeannouncd/advent-haskell#readme
 bug-reports:    https://github.com/tobeannouncd/advent-haskell/issues
 author:         tobeannouncd
-maintainer:     wzrds3@gmail.com
-copyright:      2024 tobeannouncd
+maintainer:     tobeannouncd@gmail.com
+copyright:      2024 Tyler Aas
 license:        BSD-3-Clause
 license-file:   LICENSE
 build-type:     Simple
@@ -25,43 +25,58 @@ source-repository head
 
 library
   exposed-modules:
-      Lib
-  other-modules:
-      Paths_advent_haskell
-  autogen-modules:
-      Paths_advent_haskell
+      AoC.CLI
+      AoC.CLI.Getter
+      AoC.CLI.Input
+      AoC.Parsing
+      AoC.Prelude
+      AoC.Solution
+      AoC.Solution.RWE
+      Solutions
+      Solutions.Y2015
+      Solutions.Y2015.D01
+      Solutions.Y2015.D02
   hs-source-dirs:
       src
+  default-extensions:
+      LambdaCase
+      BlockArguments
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
-      base >=4.7 && <5
-  default-language: Haskell2010
+      advent-of-code-api
+    , base >=4.7 && <5
+    , bytestring
+    , containers
+    , mtl
+    , optparse-applicative
+    , parsec
+    , text
+    , time
+  default-language: GHC2021
 
 executable advent-haskell-exe
   main-is: Main.hs
-  other-modules:
-      Paths_advent_haskell
-  autogen-modules:
-      Paths_advent_haskell
   hs-source-dirs:
       app
+  default-extensions:
+      LambdaCase
+      BlockArguments
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       advent-haskell
     , base >=4.7 && <5
-  default-language: Haskell2010
+  default-language: GHC2021
 
 test-suite advent-haskell-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
-  other-modules:
-      Paths_advent_haskell
-  autogen-modules:
-      Paths_advent_haskell
   hs-source-dirs:
       test
+  default-extensions:
+      LambdaCase
+      BlockArguments
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       advent-haskell
     , base >=4.7 && <5
-  default-language: Haskell2010
+  default-language: GHC2021
