--- a/package.yaml
+++ b/package.yaml
@@ -1,3 +1,4 @@
+spec-version:        0.36.0
 name:                advent-haskell
 version:             0.1.0.0
 github:              "tobeannouncd/advent-haskell"
@@ -33,8 +34,23 @@ ghc-options:
 - -Wpartial-fields
 - -Wredundant-constraints
 
+language: GHC2021
+
+default-extensions:
+- LambdaCase
+- BlockArguments
+
 library:
   source-dirs: src
+  dependencies:
+  - advent-of-code-api
+  - optparse-applicative
+  - text
+  - bytestring
+  - mtl
+  - parsec
+  - containers
+  - time
 
 executables:
   advent-haskell-exe:
